--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "php": "^5.6 || ^7.0",
         "phpunit/php-file-iterator": "~1.4",
         "phpunit/php-text-template": "~1.2",
-        "vaisakhshiva/php-code-coverage": "~4.0.8-fix",
+        "vaisakhshiva/php-code-coverage": "~4.0.81",
         "phpunit/php-timer": "^1.0.6",
         "phpunit/phpunit-mock-objects": "^3.2",
         "phpspec/prophecy": "^1.6.2",
